Update and rename 학원에서 진행.md to 2월 4주차.md

--- a/학원/2월 4주차.md
+++ b/학원/2월 4주차.md
@@ -1,5 +1,15 @@
 # 학원에서 하는것들
 
+## 23.02.21 목표
+- java 개발환경을 설치 할 수 있다.
+- java 클래스의 구성 이해 자성
+- 입출력 구현
+- 변수 이해 적용
+- 데이터 타입의 종류 숙지 적용
+
+- 이번주 8교시 개인별 면담 예정
+
+
 D 디렉토리(Directory) 폴더 생성
 
 D:HKD(이름 이니셜) - java -
@@ -21,4 +31,7 @@ public class WelcomeJava {
 
 - 인텔리제이랑 이클립스는 단축키 쓰임이 많이 다르네
 
-- sys가 아닌 sysout 치고 + 
+- sys가 아닌 sysout 치고 + ctrl + space
+```
+
+
