--- a/학원/2월 4주차.md
+++ b/학원/2월 4주차.md
@@ -2,13 +2,18 @@
 
 ## 23.02.21 목표
 - java 개발환경을 설치 할 수 있다.
-- java 클래스의 구성 이해 자성
+- java 클래스의 구성 이해
 - 입출력 구현
 - 변수 이해 적용
 - 데이터 타입의 종류 숙지 적용
 
 - 이번주 8교시 개인별 면담 예정
 
+### sys가 아닌 sysout 치고 + ctrl + space
+### ctr + shf + /  = 여러줄 주석
+### main ctrl space = psvm
+
+### 1바이트는 8비트!!!
 
 D 디렉토리(Directory) 폴더 생성
 
@@ -16,7 +21,7 @@ D:HKD(이름 이니셜) - java -
 
 프린트 찍기
 ```JAVA
-// 한글이 안됨 영어로 HELLO WORLD 변경하니 됨
+// cmd에서 한글이 안되던거 영어로 HELLO WORLD 변경하니 됨
 public class WelcomeJava {
 
 	      public static void main(String[] args) {
@@ -25,13 +30,49 @@ public class WelcomeJava {
 
 		}
 }
-~~~
+```
 
-- class 는 대문자!!!
+- class 는 대문자!!! ( 잊지 말기 )
 
 - 인텔리제이랑 이클립스는 단축키 쓰임이 많이 다르네
 
-- sys가 아닌 sysout 치고 + ctrl + space
-```
+### 식별자 작성 규칙
 
+- 대소문자 구별하기
+- 클래스 이름 : 첫번째 문자는 대문자로
+- 변수, 메소드 : 첫 단어 소문자 이후 각 단어 첫 번쨰 문자는 대문자로 시작
+- 상수 이름 : 모든 문자를 대문자로 표시
 
+null 은 래퍼런스 타입에 넣을 수 있음
+
+상수 final 키워드 지정 후 변경 불가 상수니
+
+변수는 선언하고 사용해야 한다.
+
+선언하고 값을 넣는걸 초기화라고 함
+
+### 연산식에서(피연산자) 자동 변환
+- 큰것을 따라간다.
+
+### print
+출력(print)
+- 1) println() : 줄바꿈
+- 2) print()	 : 줄바꿈 안됨
+- 3) printf("저의 이름은%s이고 나이는 %d입니다", "홍길동", 20)	 : 변환이 필요할때?
+
+~~~java
+public class Print1 {
+	public static void main(String[] args) {
+		
+		// print
+		System.out.print("hi");
+		System.out.print("34345hihihihdfdfdfihi");
+		
+		// println
+		System.out.println("자바자바");
+		
+		// printf
+		System.out.printf("제 이름은 %s이고 나이는 %d 입니다", "후니", 20); // %.4f 소수점 4자리
+	}
+}
+~~~
