--- a/학원/2월 4주차.md
+++ b/학원/2월 4주차.md
@@ -54,7 +54,7 @@ null 은 래퍼런스 타입에 넣을 수 있음
 ### 연산식에서(피연산자) 자동 변환
 - 큰것을 따라간다.
 
-### print
+### print println 줄바꿈 차이 , next nextLine도 줄바꿈 차
 출력(print)
 - 1) println() : 줄바꿈
 - 2) print()	 : 줄바꿈 안됨
@@ -74,5 +74,80 @@ public class Print1 {
 		// printf
 		System.out.printf("제 이름은 %s이고 나이는 %d 입니다", "후니", 20); // %.4f 소수점 4자리
 	}
+}
+~~~
+
+### 자기소개 Scanner 찍기
+~~~java
+import java.util.Scanner;
+
+public class Print3 {
+	
+	public static void main(String[] args) {
+		
+		// 자기소개를 합니다
+		System.out.println("제 소개를 하겠습니다.");
+		
+		Scanner sc = new Scanner(System.in);
+		
+		System.out.println("이름 적어주세요");
+		String myName = sc.nextLine();
+		
+		System.out.println("나이도요");
+		int myAge = sc.nextInt();
+		
+		System.out.println("몸무게도요");
+		double myWeight = sc.nextDouble();
+		
+		System.out.println("안녕하세요 제 이름은 " + myName + "이고" + " 나이는 " + myAge + 
+				"이고 " + myWeight + "kg 입니다.");
+		
+		sc.close();
+	}
+}
+~~~
+
+### 자기소개 printf 로 찍기
+~~~java
+import java.util.Scanner;
+
+//printf 로 해보기
+public class print4 {
+	
+	public static void main(String[] args) {
+		System.out.println("소개하겠습니다!");
+		
+		Scanner sc = new Scanner(System.in);
+		
+		String myName = sc.nextLine();
+		int myAge = sc.nextInt();
+		double myWeight = sc.nextDouble();
+		
+		System.out.printf("안녕하세요! 제 이름은 %s이고 나이는 %d이고 몸무게는 %.3f 입니다.", myName,
+				myAge, myWeight);
+		
+		sc.close();
+	}
+
+}
+~~~
+
+### 아스키 코드값으로 출력
+~~~java
+public class DataType2 {
+
+	public static void main(String[] args) {
+		
+		// 문자
+		char c1 = 65; // 아스키 코드값
+		System.out.println(c1);
+				
+		char c2 = 'A';
+		System.out.println(c2);
+		
+		char c3 = '\u0041'; // 유니코드 \u코드
+		System.out.println(c3);
+	}
+
 }
 ~~~
