--- a/학원/2월 4주차.md
+++ b/학원/2월 4주차.md
@@ -151,3 +151,85 @@ public class DataType2 {
 
 }
 ~~~
+
+## 오늘했던 코드중에 제일 마음에 드는것 시간 출력
+```java
+import java.awt.BorderLayout;
+import java.awt.Color;
+import java.awt.Container;
+import java.awt.Font;
+import java.util.Calendar;
+
+import javax.swing.JFrame;
+import javax.swing.JLabel;
+
+public class Clock extends JFrame {
+	
+	// 생성자
+	Clock() {
+		setTitle("현재시간");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+		
+		Container contenPane = getContentPane();
+		contenPane.setBackground(Color.BLUE);
+		
+		contenPane.add(new ClockLabel(), BorderLayout.CENTER);
+		
+		setSize(500, 300);
+		setVisible(true);
+		
+		
+	}
+	
+	class ClockLabel extends JLabel implements Runnable {
+		
+		public ClockLabel() {
+			setText(makeTime());
+			setFont(new Font("이태릭", Font.ITALIC, 100));
+			setForeground(Color.WHITE);
+			setBackground(Color.BLUE);
+			setHorizontalAlignment(JLabel.CENTER);
+			
+			Thread th = new Thread(ClockLabel.this);
+			th.start();
+			
+		}
+		
+		public String makeTime() {
+			Calendar c = Calendar.getInstance();
+			int time = c.get(Calendar.HOUR_OF_DAY);
+			int min = c.get(Calendar.MINUTE);
+			int second = c.get(Calendar.SECOND);
+			
+			String timeText = Integer.toString(time);
+			timeText = timeText.concat(":");
+			timeText = timeText.concat(Integer.toString(min));
+			timeText = timeText.concat(":");
+			timeText = timeText.concat(Integer.toString(second));
+			
+			return timeText;
+		}
+		
+		//스레드
+		@Override
+		public void run() {
+			while(true) {
+				setText(makeTime());
+				
+				try {
+					Thread.sleep(1000); // 1000이 1초임
+				} catch (InterruptedException e) {
+					return;
+				}
+			}
+		}
+	}
+	
+	public static void main(String args[]) {
+		new Clock();
+		
+	}
+}
+```
+![파란시계](https://user-images.githubusercontent.com/111875357/220294069-14819d8e-cc77-4785-a901-19d0f68bc8dc.png)
+
