--- a/학원/2월 4주차.md
+++ b/학원/2월 4주차.md
@@ -233,3 +233,4 @@ public class Clock extends JFrame {
 ```
 ![파란시계](https://user-images.githubusercontent.com/111875357/220294069-14819d8e-cc77-4785-a901-19d0f68bc8dc.png)
 
+책 연산자 앞까지는 보기!
