--- a/학원/2월 4주차.md
+++ b/학원/2월 4주차.md
@@ -234,3 +234,5 @@ public class Clock extends JFrame {
 ![파란시계](https://user-images.githubusercontent.com/111875357/220294069-14819d8e-cc77-4785-a901-19d0f68bc8dc.png)
 
 책 연산자 앞까지는 보기!
+
+내일은 연산자, 조건문 할 예정
