--- a/학원/2월 4주차/2월 22일.MD
+++ b/학원/2월 4주차/2월 22일.MD
@@ -1,1 +1,14 @@
-비콘 찍기
+# 오늘의 학습목표
+
+## 학습내용
+- 학습내용 : 연산자의 특징을 이해하고 활용할 수 있다.
+- 조건문의 종류와 특징을 이해하고 활용할 수 있다.
+
+## 공지사항
+- 개인별 면담
+- 개인별 포트폴리오 아이디어 도출 3 10
+데이터를 저장할 수 있어야 한다.
+
+여러 사이트를 우선 참고해 보기 ( 쇼핑몰/성적관리/예약관리 )
+
+------------------------------------------------------------------------------------------------------------------------------
