--- a/학원/2월 4주차/2월 22일.MD
+++ b/학원/2월 4주차/2월 22일.MD
@@ -12,3 +12,40 @@
 여러 사이트를 우선 참고해 보기 ( 쇼핑몰/성적관리/예약관리 )
 
 ------------------------------------------------------------------------------------------------------------------------------
+byte, short, int, long, float, double
+
+### 연산자 종류
+
+산술, 비교, 논리, 증감, 대입, 비트, 쉬프트, 삼항연산자
+
+
+### 연산자 연습
+- 오류 해결 :  "num1", "num2"를 "num1 + num2" 로 해서 잘못 출력됨
+```java
+// "num1", "num2"를 "num1 + num2" 로 해서 잘못 출력됨
+import java.util.Scanner;
+
+public class Op1_산술연산자 {
+	
+	public static void main(String[] args) {
+		
+		int result = 100;
+		
+		System.out.println("숫자 두개를 입력해주세요>>>");
+		
+		// 클래스명 객체명  =     생성자
+		Scanner sc = new Scanner(System.in); // 클래스의 이름과 동일한 명 - 생성자 메서드
+		int num1 = sc.nextInt();
+		int num2 = sc.nextInt();
+		
+		result = num1 + num2;
+		
+		System.out.println("num1 + num2 = " + result);
+		System.out.printf("%s + %s = %d\n", "num1", "num2", result); // \n 행 나누기
+		
+		String str = "결과값은" + result + "입니다";
+		System.out.println(str);
+		
+	}
+}
+```
