--- a/학원/2월 4주차/2월 22일.MD
+++ b/학원/2월 4주차/2월 22일.MD
@@ -49,3 +49,42 @@ public class Op1_산술연산자 {
 	}
 }
 ```
+
+산술연산자 이용 시간 출력해보기
+- 처음에 프레임워크나 라이브러리 이용해서 하는줄 알았는데 단순계산 문제였다. 초반이니까 너무 깊게 생각 안하는게 좋은거 같다.
+```java
+import java.util.Scanner;
+
+public class Op3_산술연산자Ex {
+	
+	// 초를 입력받아서 0시간 0분 0초로 출력하시오
+	// a1 = 전체 초 / 3600 = 시
+	// a2 = 전체 초 % 3600 = 담아두기
+	
+	// a3 = a2 / 60 = 분
+	// a4 = a2 % 60 = 초
+	
+	// b / 
+	
+	public static void main(String[] args) {
+		
+		System.out.println("초를 입력해주세요>>>");
+		
+		Scanner sc = new Scanner(System.in);
+		
+		int count = sc.nextInt();
+		
+		int hour = count / 3600;
+		
+		int hour2 = count % 3600;
+		
+		int minute = hour2 / 60;
+		
+		int second = hour2 % 60;
+		
+		System.out.println("현재 시간은 " + hour +"시 " + minute + "분 " + second + "초  입니다.");
+		
+	}
+}
+```
+
