--- a/학원/2월 4주차/2월 22일.MD
+++ b/학원/2월 4주차/2월 22일.MD
@@ -14,6 +14,8 @@
 ------------------------------------------------------------------------------------------------------------------------------
 byte, short, int, long, float, double
 
+- 상수는 final 붙이거나 대문자로 만들어주기
+
 ### 연산자 종류
 
 산술, 비교, 논리, 증감, 대입, 비트, 쉬프트, 삼항연산자
@@ -84,6 +86,73 @@ public class Op3_산술연산자Ex {
 		int second = hour2 % 60;
 		
 		System.out.println("현재 시간은 " + hour +"시 " + minute + "분 " + second + "초  입니다.");
+		
+	}
+}
+```
+
+비트연산자
+
+```java
+/*
+	비트연산자
+		. 비트를 사용해 연산하는 연산자
+		. !!정수!!연산만 가능하다
+		. AND : & 두개 모두 1이 되어야 1을 반환
+		. OR  : |
+		. XOR : ^ - 같으면 0, 다르면 1
+*/
+```
+
+### 삼항연산자는 알고리즘 풀때도 자주 쓰이니 알아두기
+```java
+import java.util.Scanner;
+
+public class Op10_삼항조건연산자 {
+	
+	public static void main(String[] args) {
+		
+		Scanner sc = new Scanner(System.in);
+		System.out.println("숫자를 입력해주세요>>");
+		
+		int num = sc.nextInt();
+		
+		System.out.println( num % 2 == 0 ? "짝수" : "홀수");
+		
+		sc.close();
+	}
+}
+```
+
+### if문
+
+### switch
+```java
+import java.util.Scanner;
+
+public class Switch3 {
+	
+	public static void main(String[] args) {
+		
+		System.out.println("숫자 두개와 연산자를 입력하세요>>");
+		Scanner sc = new Scanner(System.in);
+		
+		System.out.println("첫번째 숫자를 입력해주세요>>");
+		int num1 = sc.nextInt();
+		
+		System.out.println("두번째 숫자를 입력해주세요>>");
+		int num2 = sc.nextInt();
+		
+		System.out.println("연산자를 입력해주세요>>");
+		String op = sc.next();
+		
+		switch(op) {
+		case "+" : System.out.println(num1 + op + num2 + "=" + (num1+num2)); break;
+		case "-" : System.out.println(num1 + op + num2 + "=" + (num1-num2)); break;
+		case "*" : System.out.println(num1 + op + num2 + "=" + (num1*num2)); break;
+		
+		
+		}
 		
 	}
 }
