--- a/학원/2월 4주차/2월 23일.MD
+++ b/학원/2월 4주차/2월 23일.MD
@@ -1,1 +1,16 @@
-# 수업 시작
+
+### 식별자 네이밍 규칙 (네이밍 컨벤션)
+- 카멜 표기법 : backgroundColor
+- 파스칼 표기법 : BackgroundColor
+- 스네이크 표기법 : background_color
+- 헝가리언 표기법 : dbBackgroundColor
+
+# 오늘의 학습목표
+
+- 학습내용 : ***반복문***의 종류를 이해하고 활용할 줄 안다.
+- 공지사항 : 금요일 보강진행 :클래스 앞까지 학습에 어려움이 있었던 분들은 참석해서 질문내용을 정리해서 보강에 참석 ( 시간: PM 6:30 ~ PM 8:30 )
+- 개인별 포트폴리오 아이디어 도출 : 3/10
+
+------------------------------------------------------------------------------------------------------------
+
+
