--- a/학원/2월 4주차/2월 23일.MD
+++ b/학원/2월 4주차/2월 23일.MD
@@ -8,9 +8,56 @@
 # 오늘의 학습목표
 
 - 학습내용 : ***반복문***의 종류를 이해하고 활용할 줄 안다.
-- 공지사항 : 금요일 보강진행 :클래스 앞까지 학습에 어려움이 있었던 분들은 참석해서 질문내용을 정리해서 보강에 참석 ( 시간: PM 6:30 ~ PM 8:30 )
+- 공지사항 : 
+
+금요일 보강진행 :클래스 앞까지 학습에 어려움이 있었던 분들은 참석해서 질문내용을 정리해서 보강에 참석 ( 시간: PM 6:30 ~ PM 8:30 )
 - 개인별 포트폴리오 아이디어 도출 : 3/10
+
+수업을 들으면서 느끼는건데.. 기본문법조차 안배우고 온 분들은 이해하기 어려울거 같다. 스위프트 해보고 오길 잘했다.. 알고리즘 문제 풀어보길 잘했다.. 스터디 감사했습니다.
 
 ------------------------------------------------------------------------------------------------------------
 
+sc.close(); 뺴먹지 말기
 
+hread.sleep(1000); = 1초
+```java
+try {
+	Thread.sleep(1000);
+} catch (InterruptedException e) {
+	
+}
+```
+
+for문 a ~ z까지 출력
+```java
+import java.util.Iterator;
+
+// 자바는 똑똑한거 같다
+public class For3 {
+	public static void main(String[] args) {
+		
+		for(char c='a';c<='z';c++) {
+			System.out.print(c + " ");
+		}
+	}
+}
+```
+
+for문 구구단 출력 단 나누기 가능한 코드 적용
+```java
+// System.out.println();
+
+public class For4 {
+	public static void main(String[] args) {
+		System.out.println("구구단을 출력합니다");
+		
+		// 단이 바뀔때마다
+		for(int i=1; i<10; i++) {
+			for(int j=1; j<10; j++) {
+				System.out.println(i + " * " + j + " = " + (i*j) );
+			}
+			System.out.println(); // 이거 단 나눠줄때 사용함
+		}
+	}
+}
+```
