--- a/학원/2월 4주차/2월 23일.MD
+++ b/학원/2월 4주차/2월 23일.MD
@@ -19,7 +19,12 @@
 
 sc.close(); 뺴먹지 말기
 
-hread.sleep(1000); = 1초
+print랑 println 이랑 헷갈리지 말기!!!
+
+## do ~ while : 무조건 한번은 실행한다.
+```java
+
+### hread.sleep(1000); = 1초
 ```java
 try {
 	Thread.sleep(1000);
@@ -28,7 +33,7 @@ try {
 }
 ```
 
-for문 a ~ z까지 출력
+### for문 a ~ z까지 출력
 ```java
 import java.util.Iterator;
 
@@ -43,9 +48,9 @@ public class For3 {
 }
 ```
 
-for문 구구단 출력 단 나누기 가능한 코드 적용
+### for문 구구단 출력 단 나누기 가능한 코드 적용
 ```java
-// System.out.println();
+// System.out.println(); 넣어주면 단 나눠주기 가
 
 public class For4 {
 	public static void main(String[] args) {
@@ -53,11 +58,238 @@ public class For4 {
 		
 		// 단이 바뀔때마다
 		for(int i=1; i<10; i++) {
+			
+			System.out.println(i + "단이 들어갑니다.");
+			
 			for(int j=1; j<10; j++) {
-				System.out.println(i + " * " + j + " = " + (i*j) );
+				System.out.println(i + " * " + j + " = " + (i*j));
 			}
 			System.out.println(); // 이거 단 나눠줄때 사용함
 		}
 	}
+}
+```
+
+### while문
+```java
+public class While1 {
+
+	public static void main(String[] args) {
+
+		int i = 1;
+		while(i<10) {
+			System.out.println(i);
+
+			try {
+				Thread.sleep(500);
+			} catch (InterruptedException e) {
+				e.printStackTrace();
+			}
+
+			i++; // 식이 설정 되어야 무한루프에 안빠짐
+		}
+	}
+}
+```
+
+### j 초기화 안해서 틀렸던 while문
+```java
+public class While1 {
+
+	public static void main(String[] args) {
+
+		int i = 1;
+		int j = 1;
+		while(i < 10) {
+			
+			while(j < 10) {
+				
+				System.out.println(i + " * " + j + " = " + (i*j));
+				j = j + 1;	
+			}
+			System.out.println("");
+			i = i + 1;
+			j = 0; // j 초기화 해야함 , j while문이 9번 돌아서 j값이 9가 되어있음 이것을 1로 초기화 시켜줘야 구구단 가능
+		}
+		System.out.println("종료");
+	}
+}
+```
+
+### while 이건 재밌었다!
+```java
+import java.util.Scanner;
+
+public class While2 {
+	
+	public static void main(String[] args) {
+		
+		// 외부에서 숫자를  계속 입력받아서
+		// 합계와 총 몇 개를 입력받았는지..
+		// 단, -1을 입력하면 중지하시오.
+		
+		/*
+		  . 스캐너를 가져온다
+		  . 스캐너에서 값을 반복적으로 입력받는다.
+		  . 카운트, 합을 누적해나간다
+		  . 그러다가 입력하면 종료되고
+		  . 입력된 갯수, 합계, 평균을 출력한다.  
+		  
+		*/
+		
+		Scanner sc = new Scanner(System.in);
+		
+		int result = 0;
+		int count = 0;
+		
+		System.out.println("계산할 숫자들을 입력하고 -1을 눌러 종료시키세요.");
+		
+		while(true) {
+			
+			int num = sc.nextInt();
+			
+			if(num == -1) {
+				System.out.println("누적 합계는 : " + result + "입니다.");
+				System.out.println("총 카운트는 : " + count + "입니다.");
+			}
+			else {
+				result += num;
+				count++;
+			}	
+		}
+	}
+}
+
+```
+
+## do - while은.. 보고만 넘겼는데 하긴 해야겠다
+```java
+package ch05_반복문;
+
+import java.util.Scanner;
+
+// 숫자 맞추기 게임
+
+public class DoWhile3 {
+	
+	public static void main(String[] args) {
+		
+		System.out.println("1~100중에서 어떤 숫자일까요?");
+		
+		Scanner sc = new Scanner(System.in);
+		
+		int answer = (int)(Math.random()*100)+1;
+//		System.out.println(answer);
+		int cnt = 0;
+		int num;
+		
+		do {
+			cnt++;
+			
+			num = sc.nextInt();
+			if(answer == num) {
+				System.out.println("축하합니다." + cnt + "번 만에 맞췄습니다.");
+			}
+			else if(answer > num) {
+				System.out.println("더 큰 수를 입력하세요");
+			}
+			else if(answer < num) {
+				System.out.println("더 작은 수를 입력하세요");
+			}
+			
+		}while(cnt<10);
+		
+		System.out.println("10번 넘겼어요");
+		
+	}
+}
+
+```
+
+# 못 푼 문제!!!
+
+```java
+public class Q2 {
+	
+	/* for을 이용해서 구현해 보세요.
+	  				    * 
+	  				   ** 
+	  				  *** 
+	  				 **** 
+	  				***** 
+	  				**** 
+	  				*** 
+	  				** 
+	  				* 
+	*/
+	
+	// i , j , k ,m 총 4개로 만들어야겠다
+	
+	public static void main(String[] args) {
+		
+		String str = "";
+		
+		for(int i=4; i>=0; i--) {
+			for(int j=0; j<i; j++) {
+				System.out.print(" ");
+			}
+			str += "*";
+			System.out.println(str);
+		}
+		
+		for(int k=3; k>=0; k--) {
+			for(int m=0; m<=k; m++) {
+				System.out.print("*");
+			}
+			System.out.println();
+		}
+		
+	}
+}
+```
+
+```java
+public class Q3 {
+	
+	/* for문으로 해보자
+	  			    *
+	  			   **
+	  			  ***
+	  			 ****
+	  			*****
+	  			 ****    1의 1열
+	  			  ***    2의 1열, 2의 2열
+	  			   **    3의 1열 , 2열, 3열
+	  			    *    4의 1열, 2열, 3열, 4열
+	*/
+	
+	public static void main(String[] args) {
+
+		String str = "";
+		String str2 = "";
+//		String input = "*";
+
+		for(int i=4; i>=0; i--) {
+			for(int j=0; j<i; j++) {
+				System.out.print(" ");
+			}
+			str += "*";
+			System.out.println(str);
+		}
+		
+		for(int k=0; k<=4; k++) {
+			str = " ";
+			System.out.println(str);
+		}
+	}
+}
+```
+
+```java
+public class Q7_입출조회프로그램 {
+// 얘가 제일 재밌겠다
+	
+	
+
 }
 ```
