--- a/학원/2월 4주차/2월 23일.MD
+++ b/학원/2월 4주차/2월 23일.MD
@@ -151,6 +151,7 @@ public class While2 {
 			if(num == -1) {
 				System.out.println("누적 합계는 : " + result + "입니다.");
 				System.out.println("총 카운트는 : " + count + "입니다.");
+				break;
 			}
 			else {
 				result += num;
@@ -265,21 +266,26 @@ public class Q3 {
 	
 	public static void main(String[] args) {
 
-		String str = "";
-		String str2 = "";
-//		String input = "*";
-
-		for(int i=4; i>=0; i--) {
+		for(int i=5; i>0; i--) {
+			for(int j=1; j<i; j++) {
+				System.out.print(" ");
+			}
+			
+			for(int j=6; j>i; j--) {
+				System.out.print("*");
+			}
+			System.out.println();
+		}
+		
+		for(int i=1; i<5;i++) {
 			for(int j=0; j<i; j++) {
 				System.out.print(" ");
 			}
-			str += "*";
-			System.out.println(str);
-		}
-		
-		for(int k=0; k<=4; k++) {
-			str = " ";
-			System.out.println(str);
+			
+			for(int j=5; j>i; j--) {
+				System.out.print("*");
+			}
+			System.out.println();	
 		}
 	}
 }
@@ -288,8 +294,89 @@ public class Q3 {
 ```java
 public class Q7_입출조회프로그램 {
 // 얘가 제일 재밌겠다
-	
-	
+import java.util.Scanner;
 
+public class Account {
+	
+	private int amount;
+	
+	Account(int amount) {
+		this.amount = amount;
+	}
+	
+	// 입금
+	public int deposit(int money) {
+		
+		this.amount += money;
+		System.out.println("현재 잔액은" + amount + "원 입니다.");
+		return amount;
+	}
+	
+	// 출금
+	public int withdraw(int money) {
+		if (this.amount < money) {
+			System.out.println("잔액이 부족합니다.");
+		} else {
+			this.amount -= money;
+			System.out.println(money +"원을 출금 하셨습니다.");
+			System.out.println("현재 잔액은 " + amount + "원 입니다.");
+		}
+		return amount;
+	}
+	
+	
+	// 잔고 확인
+	public int check(int money) {
+		System.out.println("현재 잔액은" + amount + "원 입니다.");
+		return amount;
+	}
+	
+	
+	
+	
+	public static void main(String[] args) {
+		
+		Account B = new Account(0);  // amount 값 0
+		int money = 0;
+		
+		Scanner sc = new Scanner(System.in);
+		boolean exit = false;
+		
+		do {
+			System.out.println(
+					"----------------------\n"
+					+ "1.예금|2.출금|3.잔고|4.종료\n"
+					+ "----------------------\n"
+					+ "메뉴를 선택하세요>>"
+					);
+			
+			int menu = sc.nextInt();
+			switch(menu) {
+			case 1:
+				System.out.println("예금을 누르셨습니다.");
+				money = sc.nextInt();
+				B.deposit(money);
+//				System.out.println(B.amount);
+				break;
+			case 2:
+				System.out.println("출금을 누르셨습니다.");
+				money = sc.nextInt();
+				B.withdraw(money);
+				break;
+			case 3:
+				System.out.println("잔고확인을 누르셨습니다.");
+//				money = sc.nextInt();
+				B.check(money);
+				break;
+			case 4:
+				System.out.println("종료하겠습니다.");
+				exit = true;
+				break;
+			default :
+				System.out.println("잘못 입력하셨습니다.");
+			}		
+		} while(!exit);
+	}
 }
+
 ```
