--- a/학원/2월 4주차/2월 23일.MD
+++ b/학원/2월 4주차/2월 23일.MD
@@ -294,24 +294,25 @@ public class Q3 {
 ```java
 public class Q7_입출조회프로그램 {
 // 얘가 제일 재밌겠다
+
 import java.util.Scanner;
 
-public class Account {
-	
+public class Q7_입출조회프로그램 {
+
 	private int amount;
-	
-	Account(int amount) {
+
+	Q7_입출조회프로그램(int amount) {
 		this.amount = amount;
 	}
-	
+
 	// 입금
 	public int deposit(int money) {
-		
+
 		this.amount += money;
 		System.out.println("현재 잔액은" + amount + "원 입니다.");
 		return amount;
 	}
-	
+
 	// 출금
 	public int withdraw(int money) {
 		if (this.amount < money) {
@@ -323,40 +324,38 @@ public class Account {
 		}
 		return amount;
 	}
-	
-	
+
+
 	// 잔고 확인
 	public int check(int money) {
 		System.out.println("현재 잔액은" + amount + "원 입니다.");
 		return amount;
 	}
-	
-	
-	
-	
+
+
 	public static void main(String[] args) {
-		
-		Account B = new Account(0);  // amount 값 0
-		int money = 0;
-		
+
+		Q7_입출조회프로그램 B = new Q7_입출조회프로그램(0);
+		int money = 0; // 기본값 정해줘야함
+
 		Scanner sc = new Scanner(System.in);
 		boolean exit = false;
-		
+
 		do {
 			System.out.println(
 					"----------------------\n"
-					+ "1.예금|2.출금|3.잔고|4.종료\n"
-					+ "----------------------\n"
-					+ "메뉴를 선택하세요>>"
+							+ "1.예금|2.출금|3.잔고|4.종료\n"
+							+ "----------------------\n"
+							+ "메뉴를 선택하세요>>"
 					);
-			
+
 			int menu = sc.nextInt();
 			switch(menu) {
 			case 1:
 				System.out.println("예금을 누르셨습니다.");
 				money = sc.nextInt();
 				B.deposit(money);
-//				System.out.println(B.amount);
+				//				System.out.println(B.amount);
 				break;
 			case 2:
 				System.out.println("출금을 누르셨습니다.");
@@ -365,7 +364,7 @@ public class Account {
 				break;
 			case 3:
 				System.out.println("잔고확인을 누르셨습니다.");
-//				money = sc.nextInt();
+				//				money = sc.nextInt();
 				B.check(money);
 				break;
 			case 4:
