--- a/학원/2월 4주차/2월 24일.MD
+++ b/학원/2월 4주차/2월 24일.MD
@@ -1,1 +1,13 @@
-# 홧팅
+# 오늘의 학습목표
+
+## 학습내용
+- break / continue를 반복문에서 잘 사용할 줄 안다.
+- 배열을 생성하고 초기화하며 값을 읽을 수 있다.
+
+## 공지사항
+- 오늘 보강합니다
+- 클래스 앞까지 학습에 어려움이 있었던 분들은 질문내용을 정리해서 보강에 참석 하기
+
+## 포트폴리오 하세요...
+- 개인별 포트폴리오 아이디어 도출 3 10
+- 여러사이트 우선 참고해보기 > 쇼핑몰 /성적관리/ 예약관리 
