--- a/학원/2월 4주차/2월 24일.MD
+++ b/학원/2월 4주차/2월 24일.MD
@@ -11,3 +11,28 @@
 ## 포트폴리오 하세요...
 - 개인별 포트폴리오 아이디어 도출 3 10
 - 여러사이트 우선 참고해보기 > 쇼핑몰 /성적관리/ 예약관리 
+
+
+### 배열 혼자 연습해본것
+```java
+public class array {
+	
+	
+	public static void main(String[] args) {
+		
+		int[] score = {10, 20, 30, 40, 50};
+		
+		int sum = 0;
+		
+		for(int i=0;i<score.length;i++) { // 0부터 시작인데... <=length를 해버리면 없는값이 있기에 오류남
+			sum += score[i];
+		}
+		double ave = (double)sum / score.length;
+		
+		System.out.println("점수 합계 : " + sum);
+		System.out.println("점수 평균 : " + ave);
+		
+	
+	}
+}
+```
