--- a/학원/2월 4주차/2월 24일.MD
+++ b/학원/2월 4주차/2월 24일.MD
@@ -13,6 +13,27 @@
 - 여러사이트 우선 참고해보기 > 쇼핑몰 /성적관리/ 예약관리 
 
 
+### 이 방정식 반복문 문제 재밌었다!
+```java
+// 4x + 5y = 60 되는 모든 해(x,y)를 구하시오
+// x, y는 10 이하이다.
+
+public class Q8_방정식 {
+	public static void main(String[] args) {
+		
+		for(int x=0; x<=10; x++) {
+			for(int y=0; y<=10; y++) {
+				
+				if((4*x)+(5*y) == 60) {
+					System.out.println("x : " + x + ", y : " + y);
+				}
+			}
+		}	
+	}
+}
+
+```
+
 ### 배열 혼자 연습해본것
 ```java
 public class array {
