--- a/학원/2월 4주차/2월 24일.MD
+++ b/학원/2월 4주차/2월 24일.MD
@@ -1,4 +1,5 @@
-# 오늘의 학습목표
+# 오늘의 학습목표 ( 클래스는 시작문자 대문자 까먹지 말기!!!!!
+
 
 ## 학습내용
 - break / continue를 반복문에서 잘 사용할 줄 안다.
@@ -11,6 +12,12 @@
 ## 포트폴리오 하세요...
 - 개인별 포트폴리오 아이디어 도출 3 10
 - 여러사이트 우선 참고해보기 > 쇼핑몰 /성적관리/ 예약관리 
+
+
+------------------------------------------------------------------------------------------------------------------------------------
+
+## 배열은 참조타입이다. (null)로 초기
+
 
 
 ### 이 방정식 반복문 문제 재밌었다!
@@ -34,7 +41,7 @@ public class Q8_방정식 {
 
 ```
 
-### 배열 혼자 연습해본것
+### array 혼자 연습해본것
 ```java
 public class array {
 	
@@ -54,6 +61,170 @@ public class array {
 		System.out.println("점수 평균 : " + ave);
 		
 	
+	}
+}
+```
+### target 이용 break문 연습
+```java
+public class Break3 {
+	
+	public static void main(String[] args) {
+		
+		int i=0,j=0;
+		
+		target:while(i<10) {
+			i += 1;
+			System.out.println("현재의 i값은 " + i + "입니다.");
+			
+			while(true) {
+				j += 1;
+				System.out.println("현재의 j값은 : "+j);
+				if(j==5) {
+					j=0;
+					break target;
+				}
+			}
+		}
+		System.out.println("끝났습니다");
+	}
+	
+}
+
+/*
+현재의 i값은 1입니다.
+현재의 j값은 : 1
+현재의 j값은 : 2
+현재의 j값은 : 3
+현재의 j값은 : 4
+현재의 j값은 : 5
+끝났습니다
+ */
+
+```
+
+### 처음에 살짝 고민했던 산 출력배열 문제 ( Arrays.toString() )
+```java
+import java.util.Arrays;
+import java.util.Scanner;
+
+public class Array1 {
+	public static void main(String[] args) {
+		
+		// 우리나라 산 이름을 저장하는 배열 5개를 생성하고
+		// 초기화 시켜서(값을 넣어서)
+		// 하나씩 3개 출력하고
+		// 전체를 일괄 출력해 보시오
+		
+		String[] mt = new String[5];
+		
+		Scanner sc = new Scanner(System.in);
+		
+		System.out.println("첫번째 산 이름을 넣어주세요.");
+		mt[0] = sc.nextLine();
+		System.out.println("두번째 산 이름을 넣어주세요.");
+		mt[1] = sc.nextLine();
+		System.out.println("세번째 산 이름을 넣어주세요.");
+		mt[2] = sc.nextLine();
+		System.out.println("네번째 산 이름을 넣어주세요.");
+		mt[3] = sc.nextLine();
+		System.out.println("다섯번째 산 이름을 넣어주세요.");
+		mt[4] = sc.nextLine();
+		
+		System.out.println(mt[0]);
+		System.out.println(mt[1]);
+		System.out.println(mt[2]);
+		
+		System.out.println(Arrays.toString(mt));
+		
+	}
+}
+```
+### 배열에서 최대값 최소값 문제 이건 코테 1단계 문제들에서 많이봤다
+- for문의 길이는 array.length로 하는것이 좋음
+
+```java
+import java.util.Scanner;
+
+public class Array3_Ex {
+
+	public static void main(String[] args) {
+		// 1. 스캐너로 더하고 싶은 숫자를 10개 입력받는다.
+		// 2. 입력받은 숫자를 배열에 저장한다.
+		// 3. 총 합을 구한다.
+		// 4. 여기의 최대값과 최소값을 구해서 출력한다.
+		
+		Scanner sc = new Scanner(System.in);
+		
+		int[] array = new int[10];
+		
+		System.out.println("첫번째 숫자를 입력하세요.");
+		array[0] = sc.nextInt();
+		System.out.println("두번째 숫자를 입력하세요.");
+		array[1] = sc.nextInt();
+		System.out.println("세번째 숫자를 입력하세요.");
+		array[2] = sc.nextInt();
+		System.out.println("네번째 숫자를 입력하세요.");
+		array[3] = sc.nextInt();
+		System.out.println("다섯번째 숫자를 입력하세요.");
+		array[4] = sc.nextInt();
+		System.out.println("여섯번째 숫자를 입력하세요.");
+		array[5] = sc.nextInt();
+		System.out.println("일곱번째 숫자를 입력하세요.");
+		array[6] = sc.nextInt();
+		System.out.println("여덟번째 숫자를 입력하세요.");
+		array[7] = sc.nextInt();
+		System.out.println("아홉번째 숫자를 입력하세요.");
+		array[8] = sc.nextInt();
+		System.out.println("열번째 숫자를 입력하세요.");
+		array[9] = sc.nextInt();
+		
+		
+//		System.out.println(Arrays.toString(array));
+		
+		int sum = 0;
+		
+//		for(int i:array) {
+//			
+//			sum += array[i];
+//		}
+		
+		for(int i=0;i<array.length;i++) {
+			sum += array[i];
+		}
+		
+		System.out.println("array에 담긴 숫자의 총 합은 : " + sum +" 입니다.");
+		
+		int max = array[0];
+		int min = array[0];
+		
+		for(int i=0; i<array.length; i++) {
+			if(max < array[i]) {
+				max = array[i];
+			}
+		}
+		
+		for(int j=0; j<array.length; j++) {
+			if(min > array[j]) {
+				min = array[j];
+			}
+		}
+		
+		System.out.println("array에 담긴 수의 최대값은  :" + max + " 입니다." );
+		System.out.println("array에 담긴 수의 최소값은  :" + min + " 입니다." );
+	}
+}
+```
+
+### 궁금했던 string배열에서 index값 출력하는 방법!!!
+```java
+import java.util.Arrays;
+
+public class index {
+	
+	public static void main(String[] args) {
+		String[] str = {"a","b","c"};
+		
+		System.out.println(Arrays.asList(str).indexOf("b"));
 	}
 }
 ```
