--- a/학원/2월 4주차/2월 24일.MD
+++ b/학원/2월 4주차/2월 24일.MD
@@ -228,3 +228,23 @@ public class index {
 	}
 }
 ```
+
+### 집가서 초기화값 등등 이용해서 주말동안 풀어보기
+
+```java
+public class Ex1 {
+	
+	// 스캐너로 입력받아서 배열에 저장하고 출력하시오
+	// 친구 5명
+	
+	// 1. 친구이름 (스트링)
+	
+	// 2. 친구나이 (정수)
+	
+	// 3. 친구몸무게 (실수)
+	
+	// 출력 -   " --은 나이가 --이고 몸무게가 --입니다. "
+	
+	// 1번 친구의 이름을 입력하세요, 1번 친구의 나이를 입력하세요, 1번 친구의 몸무게를 입력하세요
+}
+```
