--- a/학원/2월 4주차/2월 24일.MD
+++ b/학원/2월 4주차/2월 24일.MD
@@ -248,3 +248,58 @@ public class Ex1 {
 	// 1번 친구의 이름을 입력하세요, 1번 친구의 나이를 입력하세요, 1번 친구의 몸무게를 입력하세요
 }
 ```
+
+### 코드것친것
+```java
+import java.util.Arrays;
+import java.util.Scanner;
+
+public class Ex1 {
+	
+	// 스캐너로 입력받아서 배열에 저장하고 출력하시오
+	// 친구 5명
+	
+	// 1. 친구이름 (스트링)
+	
+	// 2. 친구나이 (정수)
+	
+	// 3. 친구몸무게 (실수)
+	
+	// 출력 -   " --은 나이가 --이고 몸무게가 --입니다. "
+	
+	// 1번 친구의 이름을 입력하세요, 1번 친구의 나이를 입력하세요, 1번 친구의 몸무게를 입력하세요
+	
+	public static void main(String[] args) {
+		
+		Scanner sc = new Scanner(System.in);
+		
+		String[] name = new String[3];
+		int[] age = new int[3];
+		double[] we = new double[3];
+		
+		for(int i=0;i<name.length;i++) {
+			
+			System.out.println((i+1) + "번 친구의 이름을 입력해주세요.");
+			name[i] = sc.nextLine();			
+		}
+		
+		for(int i=0;i<name.length;i++) {
+
+			System.out.println((i+1) + "번 친구의 나이를 입력해주세요.");
+			age[i] = sc.nextInt();			
+		}
+		
+		for(int i=0;i<name.length;i++) {
+
+			System.out.println((i+1) + "번 친구의 몸무게를 입력해주세요.");
+			we[i] = sc.nextDouble();			
+		}
+		
+		System.out.println("******결과값은******");
+		
+		for(int i=0; i<name.length; i++) {
+			System.out.println(name[i] + "은(는) 나이가 " + age[i] + "살이고 몸무게는 " + we[i] + "kg 입니다.");
+		}
+	}
+}
+```
