--- a/학원/2월 4주차/2월 27일.MD
+++ b/학원/2월 4주차/2월 27일.MD
@@ -1,1 +1,22 @@
-# 시작
+### 저번주에 했던 배열 Review
+- 지역변수와 전역변수 : 선언된 위치에 따라 전역변수, 지역변수로 나뉨
+- 전역변수 : 블록 안/밖 모두 접근 가능
+- 지역변수 : 블록 안에서만 접근 가능하다.
+
+### 지금까지의 학습
+
+입출력 - 데이터타입 - 변수 - 조건문 - 반복문 - 배열
+
+----------------------------------------------------------------
+
+# 오늘의 학습목표
+## 학습내용
+- 다중 배열을 생성하고 초기화하며 값을 읽을 수 있다
+
+## 포트폴리오
+- 포트폴리오 
+
+
+
+
+
