--- a/학원/2월 4주차/2월 27일.MD
+++ b/학원/2월 4주차/2월 27일.MD
@@ -17,6 +17,77 @@
 - 포트폴리오 
 
 
+## 2차원 배열
+- 행, 열의 개념으로 이해하면 된다. : 행을 먼저 만들고 열을 만드는 개념 , 즉 행이 하나의 일차원 배열이다.
 
 
 
+- equals : 같은지 판별 
+- System.exit(0); : 프로그램 종
+
+### nextLine()을 next() 바꿔야했던 오류 발견
+~~~java
+import java.util.Scanner;
+
+public class Array5_Ex {
+	public static void main(String[] args) {
+		
+		System.out.println("회원등록 업무를 시작합니다...");
+		Scanner sc = new Scanner(System.in);
+		
+		String[] strName = new String[10];
+		int[] intAge = new int[10];
+		float[] floatWeight = new float[10];
+		
+		boolean flag = true;
+		
+		int index = 0;
+		while(flag) {
+			
+			System.out.println((index+1) + "번째 회원님을 등록합니다.");
+			System.out.println("이름 ? >");
+			strName[index] = sc.next();
+			System.out.println(" ");
+			
+			System.out.println("나이 ? >");
+			intAge[index] = sc.nextInt();
+			System.out.println("몸무게 ? >");
+			floatWeight[index] = sc.nextFloat();
+			
+			System.out.println("계속 등록하시겠습니까? (y/n)");
+			String answer = sc.next();
+			
+			if(index >= strName.length || answer.equals("n")) {
+				System.out.println("회원등록을 마칩니다. 수고하셨습니다.");
+				flag = false;
+			}
+			index ++;
+			
+		}
+		
+		System.out.println("등록된 회원님을 소개할까요? (y/n)");
+		String answer = sc.next();
+		
+		if(answer.equals("y")) {
+			for(int i=0; i<strName.length; i++) {
+				System.out.println((i+1) + "번째 회원님*********");
+				System.out.println("이름: " + strName[i]);
+				System.out.println("나이: " + intAge[i]);
+				System.out.println("몸무게: " + floatWeight[i]);
+			}
+		} else {
+			System.out.println("프로그램을 종료합니다... 수고하셨습니다.");
+			System.exit(0);
+		}
+		
+		
+		// 배열 복사
+		String[] strName2 = strName;
+		
+		
+		
+		
+		sc.close();
+	}
+}
+~~~
