--- a/학원/2월 4주차/2월 27일.MD
+++ b/학원/2월 4주차/2월 27일.MD
@@ -16,14 +16,17 @@
 ## 포트폴리오
 - 포트폴리오 
 
+## 새롭게 알게된 문법들
+- equals : 같은지 판별 
+- System.exit(0); : 프로그램 종료
+- System.arraycopy(intAge, 1, intAge2, 2, 2); : 1번을 2번부터 2번 copy 하겠다.
+- float[] floatWeight2 = Arrays.copyOf(floatWeight, 3); : 3개 copy 하겠다.
+- sort() : 정렬
+
 
 ## 2차원 배열
 - 행, 열의 개념으로 이해하면 된다. : 행을 먼저 만들고 열을 만드는 개념 , 즉 행이 하나의 일차원 배열이다.
 
-
-
-- equals : 같은지 판별 
-- System.exit(0); : 프로그램 종
 
 ### nextLine()을 next() 바꿔야했던 오류 발견
 ~~~java
@@ -91,3 +94,36 @@ public class Array5_Ex {
 	}
 }
 ~~~
+
+### 다중배열 for문은 j값이 다름 j<arr[i].length
+
+
+### 다중배열 출력하는 2가지 방법
+```java
+public class Array7 {
+	public static void main(String[] args) {
+		
+		// 생성
+		int[][] intNum = {{1,2,3},{4,5,6},{7,8,9},{10,11,12}};
+		
+		//출력1
+		for(int i=0;i<intNum.length;i++) {
+			for(int j=0;j<intNum[i].length;j++) {
+				System.out.print(intNum[i][j] + " ");
+			}
+			System.out.println();
+		}
+		
+		//출력2
+		for(int[]num : intNum) {
+			for(int a : num) {
+				System.out.print(a + " ");
+			}
+			System.out.println();
+		}
+	}
+}
+```
+
+
+
