--- a/학원/2월 4주차/2월 27일.MD
+++ b/학원/2월 4주차/2월 27일.MD
@@ -22,6 +22,7 @@
 - System.arraycopy(intAge, 1, intAge2, 2, 2); : 1번을 2번부터 2번 copy 하겠다.
 - float[] floatWeight2 = Arrays.copyOf(floatWeight, 3); : 3개 copy 하겠다.
 - sort() : 정렬
+- Object[] arr = new Object[4]; ( 타입 변환 필요 ) int num = (int)arr[0];
 
 
 ## 2차원 배열
