--- a/학원/2월 4주차/2월 27일.MD
+++ b/학원/2월 4주차/2월 27일.MD
@@ -126,5 +126,103 @@ public class Array7 {
 }
 ```
 
+### static 이용법 알고, swtich문 내 기준에선 깔끔하게 정리한
+```java
+package Ex;
 
+import java.util.Scanner;
 
+// 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 값을 배열에 저장하고
+// 1) 메뉴 1번을 선택하면 2의 배수의 합을 출력하시오
+// 2) 메뉴 2번을 선택하면... 3의 배수의 합을 구하고
+// 3) 메뉴 3번을 선택하면... 전체 합을 구하고
+// 4) 메뉴 4번을 선택하면... 평균을 구하는 프로그램을 작성하시오.
+// 5) 
+
+public class Ex3 {
+	
+	public static int baesu2(int[] num) {
+		int sum = 0;
+		
+		for(int i=0;i<num.length;i++) {
+			if(num[i] % 2 == 0) {
+				sum += num[i];
+			}
+		}
+		return sum;
+	}
+	
+	public static int baesu3(int[] num) {
+		int sum = 0;
+		
+		for(int i=0;i<num.length;i++) {
+			if(num[i] % 3 == 0) {
+				sum += num[i];
+			}
+		}
+		return sum;
+	}
+	
+	public static int allSum(int[] num) {
+		int sum = 0;
+		
+		for(int i=0;i<num.length;i++) {
+			sum += num[i];
+		}
+		return sum;
+	}
+	
+	public static int average(int[] num) {
+		int sum = 0;
+		
+		for(int i=0;i<num.length;i++) {
+			sum += num[i];
+		}
+		int ave = (sum / num.length);
+		
+		return ave;
+	}
+
+	public static void main(String[] args) {
+
+		Scanner sc = new Scanner(System.in);
+
+		int[] num = new int[]{1,2,3,4,5,6,7,8,9,10};
+
+		Ex3 ex = new Ex3();
+		
+		boolean exit = false;
+
+		do {
+			System.out.println("메뉴 1번~5번 사이를 입력하세요.");
+			int menu = sc.nextInt();
+
+			switch(menu) {
+			case 1: 			
+				System.out.println("2의 배수의 합은 : " +  Ex3.baesu2(num) + " 입니다." );
+				break;
+
+			case 2:;
+				System.out.println("3의 배수의 합은 : " + Ex3.baesu3(num) + " 입니다.");
+				break;
+
+			case 3:
+				System.out.println("전체의 합은 : " + Ex3.allSum(num) + " 입니다.");
+				break;
+
+			case 4:
+				System.out.println("평균은 : " + Ex3.average(num) + " 입니다.");
+				break;
+				
+			case 5:
+				System.out.println("종료합니다.");
+				exit = true;
+				break;
+				
+			default :
+				System.out.println("잘못된 입력입니다.");
+			}
+		} while(!exit);
+	}
+}
+```
