--- a/학원/2월 4주차/2월 28일.MD
+++ b/학원/2월 4주차/2월 28일.MD
@@ -2,13 +2,51 @@
 - 다중배열
 
 ## 오늘의 학습목표
-- 학습 내용 : 실행중 발생하는 예외사항에 대한 예외처리, 클래스에 대한 기본 개념을 이ㅐ하고 클래스의 기본 구조를 구현할 수 있다.
+- 학습 내용 : 실행중 발생하는 예외사항에 대한 예외처리, 클래스에 대한 기본 개념을 이하고 클래스의 기본 구조를 구현할 수 있다.
 - 공지 사항 : 포트폴리오!!!!
 
-## 오류처리 문법
-- 입출력 오류에 대한
+------------------------------------------------------------------------------------------------------------------------------
 
-오류처리 예제
+### 자바에서는 예외처리를 해서 프로그램이 종료되지 않고 실행을 유지시킬수 있다.
+
+Exception(예외) - IOExcepton(입출력예외처리), RuntimeException(실행오류예외처리)
+
+## 새롭게 알게된 문법들
+- Exception : 예외 
+- ArithmeticException : 0으로 처리했을때 나오는 문
+- NumberFormatException : 숫자 형식에 관한 오류 
+
+```java
+catch(ArithmeticException e) {
+			System.out.println("0으로 나눌수가 없습니다.");
+		}
+```
+
+- NumberFormatException
+
+
+
+
+## 오류처리 : 예외가 발생할떄 대응하는 응용프로그램 코드
+```java
+try {
+// 예외가 발생할 가능성이 있는 실행문 - try 블록
+}
+
+catch(처리할 예외 타입 e) {
+// 예외 발생할 경우에 해야 할 처리문 - catch 블록
+}
+
+finally {
+// 예외 발생 여부와 상관없이 무조건 실행되는 문장 - finally 블록
+}
+
+
+
+```
+
+
+### 오류처리 예제
 ```java
 package yomojomo;
 
@@ -33,3 +71,99 @@ public class ExceptionTest {
 }
 
 ```
+
+### FileNotFoundException
+```java
+package ch07_예외;
+
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
+import java.io.IOException;
+
+public class E3_FileNotFoundException {
+	
+	public static void main(String[] args) throws IOException {
+		
+		try {
+			FileInputStream fis = new FileInputStream("./file/a.txt");
+			System.out.println("파일을 찾았습니다.");
+			
+			int c;
+			while((c=fis.read()) != -1) {
+				System.out.println((char)c);
+			}
+		} catch (FileNotFoundException e) {
+			System.out.println("파일을 찾을 수가 없어요");
+		
+		} catch(IOException e) {
+			System.out.println("입출력에 오류가 발생했습니다.");
+		}
+		System.out.println();
+		System.out.println("종료합니다...");
+		
+	}
+}
+
+```
+
+## Class
+- 객체 : 다른 객체들과 정보를 받는 등, 상호작용하면서 존재 객채(속성+기능)
+- 필드, 생성자, 메서드!!!
+
+```java
+// 설계도
+class Circle {
+	// 필드
+	int radius;
+	String name;
+	
+	// 생성자
+	public Circle() {
+		
+	}
+	
+	// 메소드
+	double getArea() {	
+		
+		return 3.14 * radius * radius;
+	}
+	
+	void setArea(int r) {
+		radius = r;
+	}
+	
+}
+
+// 실행클래스
+public class C2_피자 {
+	
+	public static void main(String[] args) {
+		
+		Circle pizza = new Circle();
+		pizza.setArea(10);
+		System.out.println(pizza.getArea());
+		
+		pizza.name = "자바피자";
+		
+		
+		double area = pizza.getArea();
+		
+		System.out.println("***************");
+		
+		Circle donut = new Circle();
+		donut.setArea(5);
+		area =  donut.getArea();
+		System.out.println(area);
+		
+	}
+}
+```
+
+
+
+
+
+
+
+
+
