--- a/학원/2월 4주차/2월 28일.MD
+++ b/학원/2월 4주차/2월 28일.MD
@@ -159,11 +159,24 @@ public class C2_피자 {
 }
 ```
 
+- 클래스의 이름은 파일의 이름과 같아야 한다.
+- 생성자는 클래스의 이름과 같은 특별한 메소드이다.
+- 생성자는 객체생성과 초기화의 역할을 한다.
+	
+- 필드
+- 생성자
+	. 비어있는 생성자를 기본생성자라고 부른다
+	
+	. 이 기본생성자는  코드에서 생략하면 자동으로 컴파일시에 추가해준다.
 
-
-
-
-
+- 메소드
+	. 기능을 구현한다.
+	
+	. void가 있으면 return이 없다.
+	
+	. return이 필요하다면 메소드명 앞에 반환타입을 명시해야 한다.
+	
+	. set메소드, get메소드는 관례적으로 작성해야 한다.
 
 
 
