--- a/학원/2월 4주차/2월 28일.MD
+++ b/학원/2월 4주차/2월 28일.MD
@@ -178,5 +178,161 @@ public class C2_피자 {
 	
 	. set메소드, get메소드는 관례적으로 작성해야 한다.
 
+	. 객체 생성 후 활용한다.
+	
+		.객체명.필드명,   객체명.메소드()
 
 
+### 기본생성자를 만들어줘야 main에서 사용하기 편하다
+```java
+	public Account() {
+		
+	}
+```
+
+## 실습예제
+- 구구단 (끝날때라 그런가... 집중력을 잃었다)
+```java
+package step1_클래스와객체;
+
+import java.util.Scanner;
+
+class GuGuDan {
+	// dan, su
+	
+	// 생성자 dan, su 초기화 할수도 있고
+	
+	// setNum() - dan, su 초기화
+	
+	
+	/*
+	 	guguDan() {
+	 		// 구구단 출력까지 처리 - 해당하는 단의 1~su까지만 출력
+	 	
+	 	} 
+	*/
+	
+	int dan;
+	int su;
+	
+	public GuGuDan(int dan, int su) {
+		this.dan = dan;
+		this.su = su;
+	}
+	
+//	void setNum(int dan, int su) {
+//		this.dan = dan;
+//		this.su = su;
+//	}
+	
+	void result() {
+		
+		for(int i=1;i<=dan;i++) {
+			for(int j=1;j<=su;j++) {
+				System.out.println(i + " * " + j + " = " + (i*j));
+			}
+			System.out.println();
+		}
+	}
+
+	
+}
+
+public class C8_GuGuDanEx {
+	
+	public static void main(String[] args) {
+		
+		// 스캐너로 단, 수를 입력받는다.
+		// 객체를 생성해서
+		// 초기화시키고
+		// gugudan 출력
+		
+		Scanner sc = new Scanner(System.in);
+		
+		System.out.println("단, 수를 입력해주세요.");
+		GuGuDan guGuDan = new GuGuDan(sc.nextInt(), sc.nextInt());
+		
+		guGuDan.result();		
+	}
+}
+
+```
+
+- 제품등록문제
+```java
+package step1_클래스와객체;
+
+import java.util.Arrays;
+import java.util.Scanner;
+
+class register {
+	String name;
+	int price;
+	int count;
+	int sale;
+}
+
+
+public class C7_Goods관리프로그램EX {
+	
+	public static void main(String[] args) {
+		
+		// --------------------------------------
+		// 1. 제품수 | 2.제품내역등록 | 3.제품리스트 | 4.종료
+		// --------------------------------------
+		// 메뉴를 선택해 주세요>>
+		// 1
+		// 등록할 제품수를 입력하시오>>     ( 배열값에 넣는건가? )
+		// 2
+		//
+		
+		// 2
+		// 제품을 등록합니다.
+		// 제품명을 입력하시오>>
+		// 새우깡
+		// 제품가격을 입력하시오
+		// 1000
+		// 재고량을 입력하시오>>
+		// 21
+		// 판매량을 입력하시오>>
+		// 3
+		// 1번째 제품을 등록하였습니다.
+		
+		// 3
+		// 현재 등록된 제품들은 ~~~~~ 입니다.
+		
+		Scanner sc = new Scanner(System.in);
+		
+		boolean exit = false;		
+		do {
+			
+			System.out.println("------------------------------\n"
+							+  "1.제품수|2.제품내역등록|3.제품리스트|4.종료\n"
+							+  "------------------------------\n"
+							+  "메뉴를 선택하세요>>"
+					);
+			
+			int menu = sc.nextInt();
+			switch(menu) {
+			case 1:
+				System.out.println("등록할 제품의 수를 입력하세요>>");	
+				String[][] product = new String[sc.nextInt()][];
+				break;
+			case 2:
+				System.out.println("제품내역을 등록할 번호를 입력해주세요.");
+				
+				
+			}
+			
+		
+			
+			
+		}while(!exit);
+		
+		
+	}
+}
+
+// 제품은 따로 등록하고?
+// 제품 번호에 맞게 명 가격 등등을 입력하기?
+```
