--- a/학원/2월 4주차/2월 28일.MD
+++ b/학원/2월 4주차/2월 28일.MD
@@ -227,10 +227,10 @@ class GuGuDan {
 	
 	void result() {
 		
-		for(int i=1;i<=dan;i++) {
-			for(int j=1;j<=su;j++) {
-				System.out.println(i + " * " + j + " = " + (i*j));
-			}
+		for(int i=1;i<=su;i++) {
+
+				System.out.println(dan + " * " + i + " = " + (dan*i));
+			
 			System.out.println();
 		}
 	}
