--- a/학원/2월 4주차/3월 2일.MD
+++ b/학원/2월 4주차/3월 2일.MD
@@ -1,1 +1,47 @@
 # Review
+- 예외처리 : 잘못 사용했거나, 잘못된 코딩으로 인해 실행 중 발생한 오류
+
+#### public?
+- 접근지정자중 하나
+- Class 앞에 public을 붙여주면, 또는 변수앞에 public을 붙여주면 프로젝트 안에서 다른 package에서도 호출하여 사용할 수 있게 된다.
+- public, protected, default, private의 종류가 있다.
+
+## 오늘의 학습목표
+- 학습내용 :
+1) 클래스 안에 변수, 생성자, 메소드의 종류와 특징을 이해
+2) 오버라이딩의 개념을 이해
+3) this, this()의 차이를 이해할 수 있따
+
+- 공지사항 : 포트폴리오
+
+------------------------------------------------------------------------------------------------------------
+
+### 절차지향 vs 객체지향
+- 절차지향 : 작업의 ***순서*** 표현, 작업을 함수로 작성한 함수들의 집함
+- 객체지향 : 객체들간의 ***상호 작용***으로 표현, 클래스 혹은 개체들의 집합으로 프로그램 작성
+
+### 문자열 다루는데 있어 알아야할 사항
+```java
+/*
+			. 문자열을 다루는데 있어 알아야할 사항
+			  - 문자열을 생성하는 방법은 두가지가 있다.
+				.첫번째 : String str = new String("안녕");
+				.두번째 : String str = "안녕";
+				
+			  - 스트링 리터럴: 자바 내부적으로 '리터럴 테이블'로 특별히 관리되는
+			  		테이블이 JVM스트링 리터럴테이블이 존재한다.
+			  		
+			  		String a = "Hello"   a --- > Hello
+			  		String b = "Java"    b --- > Java
+			  		String c = "Hello"   c --- x (a의 것을 공유)
+			  		
+			  - 스트링 객체 : new String()
+			  		. 힙메모리에 생성된다.
+			  		String d = new String("Hello");  d ---> Hello
+			  		String e = new String("Java")    e ---> Java
+			  		String f = new String("Hello")   f ---> Hello
+			  		
+			  		
+		
+		*/
+```
