--- a/학원/2월 4주차/3월 2일.MD
+++ b/학원/2월 4주차/3월 2일.MD
@@ -45,3 +45,51 @@
 		
 		*/
 ```
+
+### 매개 변수 이용하기
+```java
+package step2_필드;
+
+import java.util.Scanner;
+
+class Score1 {
+	
+	
+	int[] caculated(int[] score) {
+		
+		for(int i=0;i<score.length;i++) {
+			score[i] += score[i] + 15;
+		}
+		return score;
+	}
+	
+	
+}
+
+
+public class V3_매개변수Ex2 {
+
+
+	public static void main(String[] args) {
+		
+		int[] stu = new int[3];
+		Scanner sc = new Scanner(System.in);
+		
+		System.out.println("국어 점수 입력");
+		stu[0] = sc.nextInt();
+		System.out.println("영어 점수 입력");
+		stu[1] = sc.nextInt();
+		System.out.println("수학 점수 입력");
+		stu[2] = sc.nextInt();
+		
+		Score1 cacul = new Score1();
+		
+		int[] score = cacul.caculated(stu);
+		
+		for(int value: score) {
+			System.out.println(value);
+		}
+	}
+}
+
+```
